# ProyectoI_DatosII

./: CMakeLists.txt  Image_processing.cpp  README.md  client  client.cpp  mergingStitch.cpp  server  server.cpp
wiki_images/: README.md
